[package]

name = "slab_32"
version = "0.1.1"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>", "Peter Vilim <peterlvilim@gmail.com>"]
description = "Forked from the main slab crate as an experiment. Don't use."
documentation = "https://docs.rs/slab"
homepage = "https://github.com/peterlvilim/slab"
repository = "https://github.com/peterlvilim/slab"
readme = "README.md"
keywords = []
categories = ["memory-management", "data-structures"]
